2011-10-27  Michael Saboff  <msaboff@apple.com>

        Investigate storing strings in 8-bit buffers when possible
        https://bugs.webkit.org/show_bug.cgi?id=66161

        Investigate storing strings in 8-bit buffers when possible
        https://bugs.webkit.org/show_bug.cgi?id=66161

        Added support for 8 bit string data in StringImpl.  Changed
        (UChar*) m_data to m_data16.  Added char* m_data8 as a union
        with m_data16.  Added UChar* m_copyData16 to the other union
        to store a 16 bit copy of an 8 bit string when needed.
        Added characters8() and characters16() accessor methods
        that assume the caller has checked the underlying string type
        via the new is8Bit() method. The characters() method will
        return a UChar* of the string, materializing a 16 bit copy if the
        string is an 8 bit string.  Added two flags, one for 8 bit buffer
        and a second for a 16 bit copy for an 8 bit string.

        Fixed method name typo (StringHasher::defaultCoverter()).

        Over time the goal is to eliminate calls to characters() and
        us the character8() and characters16() accessors.

        This patch does not include changes that actually create 8 bit
        strings. This is the first of at least 8 patches.  Subsequent
        patches will be submitted for JIT changes, making the JSC lexer,
        parser and literal parser, JavaScript string changes and
        then changes in webcore to take advantage of the 8 bit strings.

        This change is performance neutral for SunSpider and V8 when
        run from the command line with "jsc".

        Reviewed by Geoffrey Garen.

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def
        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::callEval):
        * parser/SourceProvider.h:
        (JSC::UStringSourceProvider::data):
        (JSC::UStringSourceProvider::UStringSourceProvider):